# my-media-player

./: AudioDecodeThread.cpp  AudioDecodeThread.h  CMakeLists.txt  MyDemuxThread.cpp  MyDemuxThread.h  MyDisplayImgWidget.h  PacketQueue.cpp  PacketQueue.h  VideoDecodeThread.cpp  VideoDecodeThread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
